--- a/angularapp1.client/src/app/search-flights/search-flights.component.html
+++ b/angularapp1.client/src/app/search-flights/search-flights.component.html
@@ -54,8 +54,8 @@
 
 
 <div *ngFor="let flight of searchResult">
-  <div class="card text-dark m-5 text-center">
-    <div class="card-body">
+  <div class="card text-dark m-4 text-center">
+    <div class="card-body" style="background-color:#f3ebeb">
       <h5 class="card-title">{{flight.airline}}</h5>
       <div class="card-title" style="color:#ff3939">
         {{flight.remainingNumberOfSeats}} remaining seats
